# poc-devops

week1/assignment1-linux/: README.md
week1/assignment2-git/: README.md
week1/assignment2-git/assign/: README.md
week1/assignment2-git/git/: .gitignore  after-rebase-anaysis.txt  diffodill.sh  rebase-analysis.txt
week1/assignment2-git/git/logs/: branch.gitlog
week1/assignment2-git/template/: diffodill.sh
week1/assignment3-gitlab/: README.md
week2/assignment1-scripting/: README.md  higher_lower.sh
week3/: README.md
week4/: todo.sh
week4/0-primer/: analysis.txt  who.who
week4/0-primer/myubuntu/: Dockerfile
week4/1-container/: Dockerfile  log.txt  start.sh
week4/2-reverse-proxy/: reverse_proxy.conf
week4/3-compose/: docker-compose.yml
week4/4-complete/: docker-compose.yml
week4/4-complete/backend/: Dockerfile  README.md  app.py  pyproject.toml
week4/4-complete/frontend/: README.md  nginx.conf  package-lock.json  package.json
week4/4-complete/frontend/public/: index.html
week4/4-complete/frontend/src/components/: TodoList.vue
week5/assgnment-2/: README.md
week5/assign-1/: README.md
week5/assign-2/: README.md
week5/assign-3/: README.md
week5/assignement-1/: README.md
week5/steps/: README.md
