[tool.poetry]
name = "todo-backend"
version = "0.1.0"
description = ""
authors = ["Timothy Sealy <timothy.sealy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
